--- a/online-shop/package.json
+++ b/online-shop/package.json
@@ -3,17 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/bootstrap": "^4.3.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.4",
+    "bootstrap": "^4.4.1",
+    "components": "^0.1.0",
+    "highcharts": "^8.0.4",
+    "highcharts-react-official": "^3.0.0",
     "react": "^16.13.1",
+    "react-bulma-components": "^3.2.0",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
+    "react-promise-tracker": "^2.1.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "typescript": "~3.7.2"
+    "recompose": "^0.30.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "styled": "^1.0.0",
+    "styled-components": "^5.1.0",
+    "typescript": "~3.7.2",
+    "webpack": "^4.42.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,7 +56,7 @@
     ]
   },
   "devDependencies": {
-    "webpack": "4.42.0",
-    "webpack-cli": "^3.3.11"
+    "bulma": "^0.8.2",
+    "node-sass": "^4.13.1"
   }
 }
